<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"

    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FFFFFF"
    android:orientation="vertical">

    <!-- Manually imitate an entire AlertDialog layout -->
    <!-- See dialog specs on: https://material.google.com/components/dialogs.html#dialogs-specs -->

    <!-- Title and content -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingLeft="24dp"
        android:paddingTop="24dp"
        android:paddingRight="24dp">

        <TextView
            android:id="@+id/fr_sc_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="dialog_title"
            android:textSize="20sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/fr_sc_Code"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text="BoilerCode"
            android:textSize="16sp" />
        <TextView
            android:id="@+id/fr_sc_MAC"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="MAC address"
            android:textSize="16sp" />
        <TextView
            android:id="@+id/fr_sc_Vers"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Version"
            android:textSize="16sp" />
        <TextView
            android:id="@+id/fr_sc_RC"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Remote control"
            android:textSize="16sp" />

        <EditText
            android:id="@+id/fr_sc_IP_ef"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="IP address" />

        <EditText
            android:id="@+id/fr_sc_Name_ef"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="Название" />
        <EditText
            android:id="@+id/fr_sc_Model_ef"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="Бренд и модель котла" />

    </LinearLayout>

    <!-- Action area -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="52dp"
        android:gravity="right"
        android:orientation="horizontal"
        android:padding="8dp">

        <Button
            android:id="@+id/fr_sc_neg_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:padding="4dp"
            android:paddingStart="4dp"
            android:text="@string/txt_ret"
            android:gravity="center"
            android:textAlignment="center" />

        <Button
            android:id="@+id/fr_sc_pos_button"
            android:layout_width="73dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:padding="4dp"
            android:text="@string/txt_set" />

        <Button
            android:id="@+id/fr_sc_del_button"
            android:layout_width="70dp"
            android:layout_height="36dp"
            android:layout_marginStart="8dp"
            android:padding="4dp"
            android:text="@string/txt_del" />

    </LinearLayout>

</LinearLayout>